Allow plugins to declare a package of Installables as well as just individual Installables. This helps plugins maintain a list of their Installables in just a single place, instead of a duplication between code and manifest